Finished docs for books
